k8s/service6/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service6-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: service6
